--- a/Final.Contactt.html
+++ b/Final.Contactt.html
@@ -21,7 +21,7 @@
 			</div>
 
 			<div id="aboutLink">
-				<a href="Final.Indexx.html">About</a>
+				<a href="index.html">About</a>
 			</div>
 
 		</div>
