--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</div>
 
 			<div id="aboutLink">
-				<a href="Final.indexx.html">About</a>
+				<a href="index.html">About</a>
 			</div>
 
 		</div>
@@ -31,7 +31,7 @@
 			<div id="section">
 				<div class="textish">
 					<h1>About Me</h1>
-					
+
 					<div id="cont">
 						<img src="MyPICTUREsized.jpg.jpg" id="profpic">
 						<hr>
