--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>TheCarlosDavalos</title>
-	<link rel="stylesheet" type="text/css" href="Final.Stylee.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -13,11 +13,11 @@
 			<div id="nameBar">Carlos Davalos</div>
 
 			<div id="contactLink">
-				<a href="Final.Contactt.html">Contact</a>
+				<a href="contact.html">Contact</a>
 			</div>
 
 			<div id="portLink">
-				<a href="Final.Portfolioo.html">Portfolio</a>
+				<a href="portfolio.html">Portfolio</a>
 			</div>
 
 			<div id="aboutLink">
@@ -33,7 +33,7 @@
 					<h1>About Me</h1>
 
 					<div id="cont">
-						<img src="MyPICTUREsized.jpg.jpg" id="profpic">
+						<img src="MyPIC.jpg" id="profpic">
 						<hr>
 						<p>
 							Carlos Dávalos is a graduate student in Ethnomusicology at the University of Texas at Austin. His research interests are Latin American/Mexican hip-hop, and transnational identity, technology and gender in Mexican popular music. Before moving to Austin to develop academic work, Carlos was a music journalist and media analyst based in Mexico City.
