--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Contact</title>
-	<link rel="stylesheet" type="text/css" href="Final.Stylee.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -13,11 +13,11 @@
 			<div id="nameBar">Carlos Davlaos</div>
 
 			<div id="contactLink">
-				<a href="Final.contactt.html">Contact</a>
+				<a href="contact.html">Contact</a>
 			</div>
 
 			<div id="portLink">
-				<a href="Final.Portfolioo.html">Portfolio</a>
+				<a href="portfolio.html">Portfolio</a>
 			</div>
 
 			<div id="aboutLink">
