--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,9 @@
 					<hr>
 					<form action="#">
 						<h4>Name</h4>
-						<input type="text" class="bx" name="FirstName" value="Donald"><br>
+						<input type="text" class="bx" name="FirstName" value=""><br>
 						<h4>Email</h4>
-						<input type="text" class="bx" name="LastName" value="Frump"><br>
+						<input type="text" class="bx" name="LastName" value=""><br>
 						<h4>Message/Comments</h4>
 						<input type="text" class="bx" id="messagebx" name="Message" maxlength="500"><br><br>
 						<hr>
